--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,40 @@ bind r source-file ~/.tmux.conf
 
 set-option -g allow-rename off
 
+##### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour250
+set-window-option -g window-status-current-bg colour238
+
+setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F'
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
 ##### tpm
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
@@ -35,9 +69,9 @@ set -g @colors-solarized 'dark'
 
 # in .tmux.conf
 set -g status-left-length 40
-set -g status-left "#[fg=colour233,bg=colour245,bold]Session:[ #S ]"
+set -g status-left "#[fg=colour233,bg=colour245,bold]Session:[ #S ] #[fg=colour245,bg=black,nobold]"
 set -g status-right-length 60
-set -g status-right "Batt: #{battery_icon} #{battery_percentage} #[fg=colour233,bg=colour241,bold] %a %Y-%m-%d #[fg=colour233,bg=colour245,bold] %H:%M:%S"
+set -g status-right "#[fg=colour245,bg=black]#[fg=colour233,bg=colour245,bold]Batt: #{battery_icon}#{battery_percentage} #[fg=colour241,bg=colour245]#[fg=colour233,bg=colour241,bold] %H:%M:%S #[fg=colour238,bg=colour241]#[fg=colour233,bg=colour238,bold] %a %Y-%m-%d"
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
