--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ set -g @tpm_plugins '               \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-set -g @plugin tmux-plugins/tmux-resurrect       \
+set -g @plugin tmux-plugins/tmux-resurrect
 set -g @resurrect-processes 'ssh psql mysql sqlite3'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
