--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,9 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-shell-history 'on'
 
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'powerline/default/gray'
+
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
 
