--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,8 +24,10 @@ set-window-option -g window-status-bg default
 set-window-option -g window-status-current-fg colour250
 set-window-option -g window-status-current-bg colour238
 
-setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F'
+# setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
+# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F'
+set -g window-status-format " #I:#W#F"
+set -g window-status-current-format " #I:#W#F"
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
