--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind H resize-pane -L 5
+bind L resize-pane -R 5
 bind K swap-window -t +1
 bind J swap-window -t -1
 bind r source-file ~/.tmux.conf
