--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,8 @@ set -g @tpm_plugins '               \
   tmux-plugins/tmux-battery         \
   tmux-plugins/tmux-sidebar         \
   tmux-plugins/tmux-copycat         \
+  tmux-plugins/tmux-urlview         \
+  tmux-plugins/tmux-open            \
 '
 
 # Other examples:
