--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -9,7 +9,6 @@ git
 karabiner
 karabiner-elements
 mackup
-oh-my-zsh
 omnifocus
 tig
 tmux
@@ -24,4 +23,6 @@ sequel-pro
 sourcetree
 [configuration_files]
 .exports
+.alias
+.function.sh
 .gist-vim
