--- a/.gitconfig
+++ b/.gitconfig
@@ -22,3 +22,5 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[icdiff]
+	options = --highlight --line-numbers
