--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,18 +13,14 @@ set-option -g allow-rename off
 ##### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style bg=colour235,fg=colour136,default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour244,bg=default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour250
-set-window-option -g window-status-current-bg colour238
+set-window-option -g window-status-current-style fg=colour250,bg=colour238
 
 # setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
 # setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F'
@@ -32,12 +28,11 @@ set -g window-status-format " #I:#W#F"
 set -g window-status-current-format " #I:#W#F"
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style fg=colour166,bg=colour235
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
