update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ bind J swap-window -t -1
 bind r source-file ~/.tmux.conf
 
 set-option -g allow-rename off
+set -f focus-events on
 
 ##### COLOUR (Solarized 256)
 
