change git global user and email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = chunlei.liu
-	email = chunlei.liu@grabtaxi.com
+	name = 812lcl
+	email = 812liuchunlei@163.com
 [github]
     user = 812lcl
 [push]
