--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,10 @@ bind k select-pane -U
 bind l select-pane -R
 bind H resize-pane -L 5
 bind L resize-pane -R 5
-bind K swap-window -t +1
-bind J swap-window -t -1
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+# bind K swap-window -t +1
+# bind J swap-window -t -1
 bind r source-file ~/.tmux.conf
 
 set-option -g allow-rename off
