--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = 812lcl
-	email = 812liuchunlei@163.com
+	name = Chunlei Liu
+	email = chunlei.liu@grabtaxi.com
 [github]
     user = 812lcl
 [push]
