update vscode config

--- a/VSCode-profiles/settings.json
+++ b/VSCode-profiles/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorTheme": "Monokai",
   "workbench.preferredDarkColorTheme": "Monokai",
-  "editor.minimap.enabled": true,
+  "editor.minimap.enabled": false,
   "editor.lineNumbers": "relative",
   "editor.cursorSurroundingLines": 2,
   "editor.wordWrap": "on",
@@ -152,5 +152,128 @@
   "gopls": {
     "ui.semanticTokens": true
   },
-  "git.confirmSync": false
+  "git.confirmSync": false,
+  "translation.baidu.appId": "20231025001858636",
+  "github.copilot.enable": {
+    "*": false,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false,
+    "go": false
+  },
+  "Codegeex.EnableExtension": true,
+  "go.toolsManagement.autoUpdate": true,
+  "editor.renderWhitespace": "none",
+  "projectManager.git.baseFolders": [
+    "~/go/src",
+    "~/Code"
+  ],
+  "explorer.confirmDelete": false,
+  "baidu.comate.username": "812lcl",
+  "baidu.comate.langSuggestion": {
+    "ocaml": true,
+    "smalltalk": true,
+    "less": true,
+    "ada": true,
+    "glsl": true,
+    "makefile": true,
+    "maple": true,
+    "dart": true,
+    "php": true,
+    "augeas": true,
+    "mermaid": true,
+    "alloy": true,
+    "restructuredtext": true,
+    "clojure": true,
+    "emacslisp": true,
+    "kotlin": true,
+    "swift": true,
+    "commonlisp": true,
+    "zig": true,
+    "sass": true,
+    "javascript": true,
+    "html": true,
+    "css": true,
+    "verilog": true,
+    "bluespec": true,
+    "applescript": true,
+    "agda": true,
+    "stata": true,
+    "typescript": true,
+    "sas": true,
+    "awk": true,
+    "r": true,
+    "racket": true,
+    "graphql": true,
+    "cmake": true,
+    "matlab": true,
+    "assembly": true,
+    "antlr": true,
+    "vue": true,
+    "rmarkdown": true,
+    "lean": true,
+    "batchfile": true,
+    "standardml": true,
+    "jupyter": true,
+    "ruby": true,
+    "pug": true,
+    "systemverilog": true,
+    "cuda": true,
+    "yacc": true,
+    "sql": true,
+    "java": true,
+    "lua": true,
+    "javaserverpages": true,
+    "haskell": true,
+    "scheme": true,
+    "csharp": true,
+    "xslt": true,
+    "tex": true,
+    "mathematica": true,
+    "stylus": true,
+    "solidity": true,
+    "objectivec": true,
+    "literatehaskell": true,
+    "rust": true,
+    "swan": true,
+    "thrift": true,
+    "sparql": true,
+    "python": true,
+    "shell": true,
+    "others": true,
+    "protocolbuffer": true,
+    "san": true,
+    "vhdl": true,
+    "fortran": true,
+    "groovy": true,
+    "json": true,
+    "scss": true,
+    "julia": true,
+    "literateagda": true,
+    "go": true,
+    "coffeescript": true,
+    "idris": true,
+    "isabelle": true,
+    "prolog": true,
+    "scala": true,
+    "stan": true,
+    "dockerfile": true,
+    "tcsh": true,
+    "pascal": true,
+    "cpp": true,
+    "yaml": true,
+    "literatecoffeescript": true,
+    "tcl": true,
+    "elm": true,
+    "visualbasic": true,
+    "elixir": true,
+    "all": true,
+    "fsharp": true,
+    "erlang": true,
+    "powershell": true,
+    "markdown": true,
+    "perl": true
+  },
+  "tabnine.experimentalAutoImports": true,
+  "Codegeex.Privacy": true
 }
