--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,18 @@
+PubkeyAcceptedKeyTypes=+ssh-rsa
+
 host *
 ControlMaster auto
 ControlPath ~/.ssh/master-%r@%h:%p
+
+Host kl
+  HostName jmszjk.singularity-ai.com
+  User chunlei.liu                     # 修改为自己的账号名称
+  ForwardAgent yes
+  port 2222
+  KeepAlive yes
+  ServerAliveInterval 60
+  ControlMaster auto
+  ControlPersist yes
+  ControlPath ~/.ssh/socks/%h-%p-%r
+  ForwardAgent yes
+  GSSAPIAuthentication no
