--- a/.ssh/config
+++ b/.ssh/config
@@ -16,3 +16,36 @@ Host kl
   ControlPath ~/.ssh/socks/%h-%p-%r
   ForwardAgent yes
   GSSAPIAuthentication no
+
+Host dev01
+  HostName 101.132.116.113
+  User chunlei.liu                     # 修改为自己的账号名称
+  ForwardAgent yes
+  KeepAlive yes
+  ServerAliveInterval 60
+  ControlMaster auto
+  ControlPersist yes
+  ControlPath ~/.ssh/socks/%h-%p-%r
+  GSSAPIAuthentication no
+
+Host dev02
+  HostName 101.132.96.198
+  User chunlei.liu                     # 修改为自己的账号名称
+  ForwardAgent yes
+  KeepAlive yes
+  ServerAliveInterval 60
+  ControlMaster auto
+  ControlPersist yes
+  ControlPath ~/.ssh/socks/%h-%p-%r
+  GSSAPIAuthentication no
+
+Host dev03
+  HostName 139.196.99.7
+  User chunlei.liu                     # 修改为自己的账号名称
+  ForwardAgent yes
+  KeepAlive yes
+  ServerAliveInterval 60
+  ControlMaster auto
+  ControlPersist yes
+  ControlPath ~/.ssh/socks/%h-%p-%r
+  GSSAPIAuthentication no
