--- a/.gitconfig
+++ b/.gitconfig
@@ -23,5 +23,9 @@
 [feature]
 	manyFile = true
 [user]
-	email = 812liuchunlei@163.com
-	name = 812lcl
+	email = chunlei.liu@kunlun-inc.com
+	name = Chunlei.Liu
+[url "git@git.singularity-ai.com:"]
+	insteadOf = https://git.singularity-ai.com/
+[alias]
+    mr = !sh -c 'git fetch $1 merge-requests/$2/head:mr-$1-$2 && git checkout mr-$1-$2' -
