--- a/.ssh/config
+++ b/.ssh/config
@@ -17,6 +17,19 @@ Host kl
   ForwardAgent yes
   GSSAPIAuthentication no
 
+Host klhk
+  HostName jmshk.singularity-ai.com
+  User chunlei.liu                     # 修改为自己的账号名称
+  ForwardAgent yes
+  port 2222
+  KeepAlive yes
+  ServerAliveInterval 60
+  ControlMaster auto
+  ControlPersist yes
+  ControlPath ~/.ssh/socks/%h-%p-%r
+  ForwardAgent yes
+  GSSAPIAuthentication no
+
 Host dev01
   HostName 101.132.116.113
   User chunlei.liu                     # 修改为自己的账号名称
