--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -25,6 +25,7 @@ appcleaner
 claude-code
 codex
 cursor
+opencode
 [applications_to_ignore]
 vim
 neovim
@@ -38,3 +39,5 @@ sourcetree
 .gist-vim
 ~/.fzf.bash
 ~/.fzf.zsh
+~/.node-certs/ISRG\ Root\ X1.pem
+~/.node-certs/ISRG Root X1.pem
