--- a/.env.template
+++ b/.env.template
@@ -6,4 +6,4 @@ export GEMINI_API_KEY=
 export ANTHROPIC_BASE_URL="http://127.0.0.1:3456"
 export ANTHROPIC_AUTH_TOKEN="test"
 export ANTHROPIC_API_KEY="" # Important: Must be explicitly empty
-export WAKATIME_KEY=
+export WAKATIME_API_KEY=
