--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,17 @@
+# codex
 export OPENAI_BASE_URL=
+
+# OpenCode
+export OPENAI_BASE_URL_SKY=
+export OPENAI_BASE_URL_XMIND=
+export OPENAI_BASE_URL_ROUTER=
 export OPENAI_API_KEY=
+
+# gemini-cli
 export GEMINI_API_KEY=
+#export GEMINI_MODEL="gemini-3-pro-high"
+
+# claude code
 #export ANTHROPIC_BASE_URL="https://openrouter.ai/api"
 #export ANTHROPIC_AUTH_TOKEN=""
 export ANTHROPIC_BASE_URL="http://127.0.0.1:3456"
