--- a/.ssh/config
+++ b/.ssh/config
@@ -67,3 +67,9 @@ Host dev03
   ControlPersist yes
   ControlPath ~/.ssh/socks/%h-%p-%r
   GSSAPIAuthentication no
+
+Host github.com
+  HostName ssh.github.com
+  User git
+  Port 443
+
