update cc-switch and cc statusline config

--- a/.cc-switch/settings.json
+++ b/.cc-switch/settings.json
@@ -8,7 +8,7 @@
   "enableLocalProxy": false,
   "language": "zh",
   "currentProviderClaude": "81bef914-a5e4-46a3-82c2-051fe25fcd6e",
-  "currentProviderCodex": "default",
+  "currentProviderCodex": "8c4b6f99-6541-4d8b-b87d-8ea5fb707a4d",
   "skillSyncMethod": "auto",
   "preferredTerminal": "ghostty"
 }
